<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmento_inicio"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bot_nav_inicio"/>

    <item
        android:id="@+id/fragmento_gastos"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/bot_nav_gastos"/>

    <item
        android:id="@+id/anchor"
        android:title=""/>

    <item
        android:id="@+id/fragmento_pasos"
        android:icon="@drawable/ic_baseline_directions_walk_24"
        android:title="@string/bot_nav_pasos"/>

    <item
        android:id="@+id/fragmento_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bot_nav_perfil"/>
</menu>