<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmento_inicio_analista"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bot_nav_inicio"/>

    <item
        android:id="@+id/fragmento_analisis_usuarios"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/bot_nav_analisis_usuarios"/>

    <item
        android:id="@+id/anchor"
        android:title=""/>

    <item
        android:id="@+id/fragmento_analisis_gastos"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/bot_nav_analisis_gastos"/>

    <item
        android:id="@+id/fragmento_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bot_nav_perfil"/>

</menu>