<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navegacion_default"
    app:startDestination="@id/fragmento_inicio">

    <fragment
        android:id="@+id/fragmento_inicio"
        android:name="com.example.proyectomovilfinal.paginas.PaginaInicio"
        android:label="@string/bot_nav_inicio"
        tools:layout="@layout/fragment_pagina_inicio"/>

    <fragment
        android:id="@+id/fragmento_gastos"
        android:name="com.example.proyectomovilfinal.paginas.PaginaHistorialGastos"
        android:label="@string/bot_nav_gastos"
        tools:layout="@layout/pagina_historial_gastos"/>

    <fragment
        android:id="@+id/fragmento_pasos"
        android:name="com.example.proyectomovilfinal.paginas.PaginaHistorialPasos"
        android:label="@string/bot_nav_pasos"
        tools:layout="@layout/pagina_historial_pasos"/>

    <fragment
        android:id="@+id/fragmento_perfil"
        android:name="com.example.proyectomovilfinal.paginas.PaginaPerfil"
        android:label="@string/bot_nav_perfil"
        tools:layout="@layout/fragment_pagina_perfil"/>

</navigation>