<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <ImageView
        android:id="@+id/icono_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icono" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icono_login"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/titulo_iniciar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/titulo_datos_usuario"
                android:textAlignment="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="?attr/textAppearanceHeadline2"/>

            <EditText
                android:id="@+id/edit_datos_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_campo_nombre"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableTint="@color/blue_gray_200"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/edit_datos_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_campo_apellido"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableTint="@color/blue_gray_200"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/edit_datos_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_campo_edad"
                android:drawableStart="@drawable/ic_baseline_accessibility_new_24"
                android:drawableTint="@color/blue_gray_200"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/edit_datos_presupuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_campo_presupuesto"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:drawableTint="@color/blue_gray_200"
                android:drawablePadding="8dp"/>

            <Button
                android:id="@+id/btn_confirmar_datos_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>