<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".paginas.PaginaInicio">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_agregar_gasto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hello_blank_fragment"
            android:textAppearance="?attr/textAppearanceHeadline2"/>

        <TextView
            android:id="@+id/descripcion_agregar_gasto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/descripcion_agregar_gasto"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintTop_toBottomOf="@id/titulo_agregar_gasto"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/spinner_tipo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/descripcion_agregar_gasto"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt_edit_cantidad_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/temporal_costo"
            app:layout_constraintTop_toBottomOf="@id/spinner_tipo_gasto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/txt_edit_descripcion_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/hello_blank_fragment"
            app:layout_constraintTop_toBottomOf="@id/txt_edit_cantidad_gasto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_guardar_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="TODO" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>